@@ -29,16 +29,18 @@ module Fairy
 ##CONF.CONTROLLER_ASSIGN_NEW_PROCESSOR_N_FACTOR = 1
 
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
-#  CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemorySizedQueue}
+  CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemorySizedQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
-  CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
-#  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemorySizedPoolQueue}
+#  CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
+  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemorySizedPoolQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 
 ##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
+  CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 20000
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
-CONF.ONMEMORY_SIZEDQUEUE_SIZE = 100000
+  CONF.POOLQUEUE_POOL_THRESHOLD = 8000
+  CONF.ONMEMORY_SIZEDQUEUE_SIZE = 640000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
