@@ -1,3 +1,7 @@
+Wed May 20 16:08:11 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* processor.rb: 通信先が死んだときログを残すようにした.
+
 Tue May 19 00:14:24 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* port.rb: バグっていた.
